# glimpse-tty

./: CLAUDE.md  CONTRIBUTING.md  FOLLOW_UP.md  LICENSE.txt  README.md  SCROLL_SMOOTHNESS_INVESTIGATION.md  awrit  config.example.js  config.js  markdown-test.md  mise.toml  package-lock.json  package.json  setup.sh  tsconfig.json
.github/: dependabot.yml
.github/workflows/: CI.yml  checks.yml  release.yml
awrit-native-rs/: .gitignore  Cargo.toml  biome.json  build.rs  index.d.ts  index.js  input-test.js  package.json  run-shim
awrit-native-rs/crates/bgra-to-rgba/: Cargo.toml
awrit-native-rs/crates/bgra-to-rgba/benches/: bgra_to_rgba.rs
awrit-native-rs/crates/bgra-to-rgba/src/: lib.rs
awrit-native-rs/crates/crossterm/: Cargo.toml  README.md
awrit-native-rs/crates/crossterm/src/: command.rs  cursor.rs  event.rs  lib.rs  macros.rs  style.rs  terminal.rs  tty.rs
awrit-native-rs/crates/crossterm/src/cursor/: sys.rs
awrit-native-rs/crates/crossterm/src/event/: filter.rs  read.rs  source.rs  sys.rs
awrit-native-rs/crates/crossterm/src/event/sys/unix/: parse.rs
awrit-native-rs/crates/crossterm/src/style/types/: colored.rs
awrit-native-rs/crates/crossterm/src/terminal/: sys.rs
awrit-native-rs/scripts/: download-binary.js  fix-types.js
awrit-native-rs/src/: input.rs  lib.rs  term.rs
docs/: get  index.html
glimpse-tty-native-rs/: package.json
patches/: lru-cache@5.1.1.patch
src/: abort.ts  args.test.ts  args.ts  dpi.ts  extensions.ts  index.ts  inputHandler.ts  layout.test.ts  layout.ts  paint.ts  preload.js  selection.ts  session.ts  windows.ts
(+19 files in other folders)
