[package]
name = "awrit-native-rs"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nix = { version = "0.29.0", features = ["fs", "mman"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "=3.0.0-alpha.31", default-features = false, features = [
    "napi5",
] }
napi-derive = "=3.0.0-alpha.28"
base64 = "0.22.1"
bgra-to-rgba = { path = "crates/bgra-to-rgba" }
crossterm = { path = "crates/crossterm" }
ctor = "0.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
